--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: yneo-db
     restart: always
     environment:
-      POSTGRES_USER: yneo
-      POSTGRES_PASSWORD: password123
-      POSTGRES_DB: yneoapp
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
