--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "dev:docker": "cp .env.local .env && npx prisma migrate dev && npm run dev",
+    "dev:neon": "cp .env.production .env && npx prisma migrate deploy && npm run dev",
     "start": "next start",
     "lint": "next lint"
   },
