--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@prisma/client": "^6.14.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-player": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
