--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "dev:docker": "cp .env.local .env && npx prisma migrate dev && npm run dev",
     "dev:neon": "cp .env.production .env && npx prisma migrate deploy && npm run dev",
     "start": "next start",
