--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "lint": "next lint",
     "studio:local": "node studio.js local",
     "studio:neon": "node studio.js neon",
-    "export": "next build && next export", 
+    "export": "next build && next export",
     "deploy": "gh-pages -d out",
     "predeploy": "npm run export"
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "next": "15.4.6",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-player": "^3.3.2"
