--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "predeploy": "npm run export"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
