--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "predeploy": "npm run export"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "next": "15.4.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-player": "^3.3.2"
