--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.14.0",
+    "@vercel/blob": "^1.1.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "media-chrome": "^4.13.1",
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
